source/formulaforce/main/objects/Driver_Standing__c/Driver_Standing__c.object-meta.xml
<CustomObject>
    <description>The Driver Standings after each F1 Race</description>
    <label>Driver Standing</label>
    <nameField>
        <displayFormat>DS-{00000}</displayFormat>
        <label>Driver Standing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Driver Standings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>