source/formulaforce/main/objects/Driver_Standing__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Driver Standings</relationshipLabel>
    <relationshipName>Driver_Standings</relationshipName>
    <type>Lookup</type>
</CustomField>