source/formulaforce/main/objects/Driver_Standing__c/fields/Position_Text__c.field-meta.xml
<CustomField>
    <fullName>Position_Text__c</fullName>
    <label>Position Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>